--- a/Soulcast/Info.plist
+++ b/Soulcast/Info.plist
@@ -57,6 +57,8 @@
 	<string>plist Location When In Use</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Soulcast uses your microphone to record your voice on command</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
