--- a/Soulcast/Info.plist
+++ b/Soulcast/Info.plist
@@ -39,11 +39,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -52,13 +52,13 @@
 		<true/>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>plist Location Always Use</string>
+	<string>You will be notified to hear others around you, even when the app is off.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>plist Location When In Use</string>
+	<string>You will be notified to hear others around you when you are using the app</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Soulcast uses your microphone to record your voice before casting it</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Soulcast uses your microphone to record your voice on command</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
