--- a/Soulcast/Info.plist
+++ b/Soulcast/Info.plist
@@ -57,6 +57,10 @@
 	<string>You will be notified to hear others around you when you are using the app</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Soulcast uses your microphone to record your voice before casting it</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
